--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1",
     "unsplash-js": "^7.0.4"
   },
   "devDependencies": {
