--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack -w --mode='development'",
     "build": "webpack --mode='production'",
-    "start": "nodemon server"
+    "start": "nodemon server",
+    "insert-user": "node database/insertUser.js"
   },
   "repository": {
     "type": "git",
