--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1",
     "unsplash-js": "^7.0.4"
   },
   "devDependencies": {
@@ -37,7 +36,9 @@
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.2",
     "nodemon": "^2.0.7",
+    "style-loader": "^2.0.0",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0"
   }
